src/main/java/de/dfki/lt/hfc/io/QueryParser.output
Grammar

    0 $accept: query $end

    1 query: select WHERE exttuple tuples filter aggregate
    2      | ASK gtuples

    3 select: SELECT svars
    4       | SELECT DISTINCT svars
    5       | SELECTALL svars
    6       | SELECTALL DISTINCT svars

    7 exttuple: tuple
    8         | interval tuple
    9         | tuple ALLENRELATION tuple
   10         | interval tuple ALLENRELATION tuple

   11 svars: '*'
   12      | vars

   13 vars: vars VAR
   14     | ε

   15 tuples: '&' tuple tuples
   16       | ε

   17 tuple: literal tuple
   18      | literal

   19 literal: URI
   20        | VAR
   21        | BLANK
   22        | ATOM

   23 interval: INTERVALSTART ATOM ATOM INTERVALEND
   24         | INTERVALSTART ATOM ',' ATOM INTERVALEND

   25 gtuples: URI gtuples
   26        | ATOM gtuples
   27        | ε

   28 filter: FILTER constraints
   29       | ε

   30 constraints: constraints '&' constraint
   31            | constraint

   32 constraint: VAR NOTEQ literal
   33           | VAR EQ literal
   34           | ID tuple
   35           | '!' ID tuple
   36           | VAR ID tuple
   37           | '!' VAR ID tuple

   38 aggregate: AGGREGATE funcalls
   39          | ε

   40 funcalls: vars '=' ID tuple '&' funcalls
   41         | vars '=' ID tuple


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 35 37
    '&' (38) 15 30 40
    '*' (42) 11
    ',' (44) 24
    '=' (61) 40 41
    error (256)
    ASK (258) 2
    SELECT (259) 3 4
    SELECTALL (260) 5 6
    DISTINCT (261) 4 6
    WHERE (262) 1
    FILTER (263) 28
    AGGREGATE (264) 38
    INTERVALSTART (265) 23 24
    INTERVALEND (266) 23 24
    NOTEQ <String> (267) 32
    EQ <String> (268) 33
    URI < String > (269) 19 25
    BLANK < String > (270) 21
    VAR < String > (271) 13 20 32 33 36 37
    ATOM < String > (272) 22 23 24 26
    ID < String > (273) 34 35 36 37 40 41
    ALLENRELATION < String > (274) 9 10


Nonterminals, with rules where they appear

    $accept (25)
        on left: 0
    query (26)
        on left: 1 2
        on right: 0
    select (27)
        on left: 3 4 5 6
        on right: 1
    exttuple <LinkedList<String>> (28)
        on left: 7 8 9 10
        on right: 1
    svars <LinkedList<String>> (29)
        on left: 11 12
        on right: 3 4 5 6
    vars <LinkedList<String>> (30)
        on left: 13 14
        on right: 12 13 40 41
    tuples <LinkedList<List<String>>> (31)
        on left: 15 16
        on right: 1 15
    tuple <LinkedList<String>> (32)
        on left: 17 18
        on right: 7 8 9 10 15 17 34 35 36 37 40 41
    literal <String> (33)
        on left: 19 20 21 22
        on right: 17 18 32 33
    interval <List<String>> (34)
        on left: 23 24
        on right: 8 10
    gtuples <LinkedList<String>> (35)
        on left: 25 26 27
        on right: 2 25 26
    filter (36)
        on left: 28 29
        on right: 1
    constraints <List<List<String>>> (37)
        on left: 30 31
        on right: 28 30
    constraint <List<String>> (38)
        on left: 32 33 34 35 36 37
        on right: 30 31
    aggregate (39)
        on left: 38 39
        on right: 1
    funcalls <LinkedList<List<String>>> (40)
        on left: 40 41
        on right: 38 40


State 0

    0 $accept: • query $end
    1 query: • select WHERE exttuple tuples filter aggregate
    2      | • ASK gtuples
    3 select: • SELECT svars
    4       | • SELECT DISTINCT svars
    5       | • SELECTALL svars
    6       | • SELECTALL DISTINCT svars

    ASK        shift, and go to state 1
    SELECT     shift, and go to state 2
    SELECTALL  shift, and go to state 3

    query   go to state 4
    select  go to state 5


State 1

    2 query: ASK • gtuples
   25 gtuples: • URI gtuples
   26        | • ATOM gtuples
   27        | ε •  [$end]

    URI   shift, and go to state 6
    ATOM  shift, and go to state 7

    $default  reduce using rule 27 (gtuples)

    gtuples  go to state 8


State 2

    3 select: SELECT • svars
    4       | SELECT • DISTINCT svars
   11 svars: • '*'
   12      | • vars
   13 vars: • vars VAR
   14     | ε •  [WHERE, VAR]

    DISTINCT  shift, and go to state 9
    '*'       shift, and go to state 10

    $default  reduce using rule 14 (vars)

    svars  go to state 11
    vars   go to state 12


State 3

    5 select: SELECTALL • svars
    6       | SELECTALL • DISTINCT svars
   11 svars: • '*'
   12      | • vars
   13 vars: • vars VAR
   14     | ε •  [WHERE, VAR]

    DISTINCT  shift, and go to state 13
    '*'       shift, and go to state 10

    $default  reduce using rule 14 (vars)

    svars  go to state 14
    vars   go to state 12


State 4

    0 $accept: query • $end

    $end  shift, and go to state 15


State 5

    1 query: select • WHERE exttuple tuples filter aggregate

    WHERE  shift, and go to state 16


State 6

   25 gtuples: • URI gtuples
   25        | URI • gtuples
   26        | • ATOM gtuples
   27        | ε •  [$end]

    URI   shift, and go to state 6
    ATOM  shift, and go to state 7

    $default  reduce using rule 27 (gtuples)

    gtuples  go to state 17


State 7

   25 gtuples: • URI gtuples
   26        | • ATOM gtuples
   26        | ATOM • gtuples
   27        | ε •  [$end]

    URI   shift, and go to state 6
    ATOM  shift, and go to state 7

    $default  reduce using rule 27 (gtuples)

    gtuples  go to state 18


State 8

    2 query: ASK gtuples •

    $default  reduce using rule 2 (query)


State 9

    4 select: SELECT DISTINCT • svars
   11 svars: • '*'
   12      | • vars
   13 vars: • vars VAR
   14     | ε •  [WHERE, VAR]

    '*'  shift, and go to state 10

    $default  reduce using rule 14 (vars)

    svars  go to state 19
    vars   go to state 12


State 10

   11 svars: '*' •

    $default  reduce using rule 11 (svars)


State 11

    3 select: SELECT svars •

    $default  reduce using rule 3 (select)


State 12

   12 svars: vars •  [WHERE]
   13 vars: vars • VAR

    VAR  shift, and go to state 20

    $default  reduce using rule 12 (svars)


State 13

    6 select: SELECTALL DISTINCT • svars
   11 svars: • '*'
   12      | • vars
   13 vars: • vars VAR
   14     | ε •  [WHERE, VAR]

    '*'  shift, and go to state 10

    $default  reduce using rule 14 (vars)

    svars  go to state 21
    vars   go to state 12


State 14

    5 select: SELECTALL svars •

    $default  reduce using rule 5 (select)


State 15

    0 $accept: query $end •

    $default  accept


State 16

    1 query: select WHERE • exttuple tuples filter aggregate
    7 exttuple: • tuple
    8         | • interval tuple
    9         | • tuple ALLENRELATION tuple
   10         | • interval tuple ALLENRELATION tuple
   17 tuple: • literal tuple
   18      | • literal
   19 literal: • URI
   20        | • VAR
   21        | • BLANK
   22        | • ATOM
   23 interval: • INTERVALSTART ATOM ATOM INTERVALEND
   24         | • INTERVALSTART ATOM ',' ATOM INTERVALEND

    INTERVALSTART  shift, and go to state 22
    URI            shift, and go to state 23
    BLANK          shift, and go to state 24
    VAR            shift, and go to state 25
    ATOM           shift, and go to state 26

    exttuple  go to state 27
    tuple     go to state 28
    literal   go to state 29
    interval  go to state 30


State 17

   25 gtuples: URI gtuples •

    $default  reduce using rule 25 (gtuples)


State 18

   26 gtuples: ATOM gtuples •

    $default  reduce using rule 26 (gtuples)


State 19

    4 select: SELECT DISTINCT svars •

    $default  reduce using rule 4 (select)


State 20

   13 vars: vars VAR •

    $default  reduce using rule 13 (vars)


State 21

    6 select: SELECTALL DISTINCT svars •

    $default  reduce using rule 6 (select)


State 22

   23 interval: INTERVALSTART • ATOM ATOM INTERVALEND
   24         | INTERVALSTART • ATOM ',' ATOM INTERVALEND

    ATOM  shift, and go to state 31


State 23

   19 literal: URI •

    $default  reduce using rule 19 (literal)


State 24

   21 literal: BLANK •

    $default  reduce using rule 21 (literal)


State 25

   20 literal: VAR •

    $default  reduce using rule 20 (literal)


State 26

   22 literal: ATOM •

    $default  reduce using rule 22 (literal)


State 27

    1 query: select WHERE exttuple • tuples filter aggregate
   15 tuples: • '&' tuple tuples
   16       | ε •  [$end, FILTER, AGGREGATE]

    '&'  shift, and go to state 32

    $default  reduce using rule 16 (tuples)

    tuples  go to state 33


State 28

    7 exttuple: tuple •  [$end, FILTER, AGGREGATE, '&']
    9         | tuple • ALLENRELATION tuple

    ALLENRELATION  shift, and go to state 34

    $default  reduce using rule 7 (exttuple)


State 29

   17 tuple: • literal tuple
   17      | literal • tuple
   18      | • literal
   18      | literal •  [$end, FILTER, AGGREGATE, ALLENRELATION, '&']
   19 literal: • URI
   20        | • VAR
   21        | • BLANK
   22        | • ATOM

    URI    shift, and go to state 23
    BLANK  shift, and go to state 24
    VAR    shift, and go to state 25
    ATOM   shift, and go to state 26

    $default  reduce using rule 18 (tuple)

    tuple    go to state 35
    literal  go to state 29


State 30

    8 exttuple: interval • tuple
   10         | interval • tuple ALLENRELATION tuple
   17 tuple: • literal tuple
   18      | • literal
   19 literal: • URI
   20        | • VAR
   21        | • BLANK
   22        | • ATOM

    URI    shift, and go to state 23
    BLANK  shift, and go to state 24
    VAR    shift, and go to state 25
    ATOM   shift, and go to state 26

    tuple    go to state 36
    literal  go to state 29


State 31

   23 interval: INTERVALSTART ATOM • ATOM INTERVALEND
   24         | INTERVALSTART ATOM • ',' ATOM INTERVALEND

    ATOM  shift, and go to state 37
    ','   shift, and go to state 38


State 32

   15 tuples: '&' • tuple tuples
   17 tuple: • literal tuple
   18      | • literal
   19 literal: • URI
   20        | • VAR
   21        | • BLANK
   22        | • ATOM

    URI    shift, and go to state 23
    BLANK  shift, and go to state 24
    VAR    shift, and go to state 25
    ATOM   shift, and go to state 26

    tuple    go to state 39
    literal  go to state 29


State 33

    1 query: select WHERE exttuple tuples • filter aggregate
   28 filter: • FILTER constraints
   29       | ε •  [$end, AGGREGATE]

    FILTER  shift, and go to state 40

    $default  reduce using rule 29 (filter)

    filter  go to state 41


State 34

    9 exttuple: tuple ALLENRELATION • tuple
   17 tuple: • literal tuple
   18      | • literal
   19 literal: • URI
   20        | • VAR
   21        | • BLANK
   22        | • ATOM

    URI    shift, and go to state 23
    BLANK  shift, and go to state 24
    VAR    shift, and go to state 25
    ATOM   shift, and go to state 26

    tuple    go to state 42
    literal  go to state 29


State 35

   17 tuple: literal tuple •

    $default  reduce using rule 17 (tuple)


State 36

    8 exttuple: interval tuple •  [$end, FILTER, AGGREGATE, '&']
   10         | interval tuple • ALLENRELATION tuple

    ALLENRELATION  shift, and go to state 43

    $default  reduce using rule 8 (exttuple)


State 37

   23 interval: INTERVALSTART ATOM ATOM • INTERVALEND

    INTERVALEND  shift, and go to state 44


State 38

   24 interval: INTERVALSTART ATOM ',' • ATOM INTERVALEND

    ATOM  shift, and go to state 45


State 39

   15 tuples: • '&' tuple tuples
   15       | '&' tuple • tuples
   16       | ε •  [$end, FILTER, AGGREGATE]

    '&'  shift, and go to state 32

    $default  reduce using rule 16 (tuples)

    tuples  go to state 46


State 40

   28 filter: FILTER • constraints
   30 constraints: • constraints '&' constraint
   31            | • constraint
   32 constraint: • VAR NOTEQ literal
   33           | • VAR EQ literal
   34           | • ID tuple
   35           | • '!' ID tuple
   36           | • VAR ID tuple
   37           | • '!' VAR ID tuple

    VAR  shift, and go to state 47
    ID   shift, and go to state 48
    '!'  shift, and go to state 49

    constraints  go to state 50
    constraint   go to state 51


State 41

    1 query: select WHERE exttuple tuples filter • aggregate
   38 aggregate: • AGGREGATE funcalls
   39          | ε •  [$end]

    AGGREGATE  shift, and go to state 52

    $default  reduce using rule 39 (aggregate)

    aggregate  go to state 53


State 42

    9 exttuple: tuple ALLENRELATION tuple •

    $default  reduce using rule 9 (exttuple)


State 43

   10 exttuple: interval tuple ALLENRELATION • tuple
   17 tuple: • literal tuple
   18      | • literal
   19 literal: • URI
   20        | • VAR
   21        | • BLANK
   22        | • ATOM

    URI    shift, and go to state 23
    BLANK  shift, and go to state 24
    VAR    shift, and go to state 25
    ATOM   shift, and go to state 26

    tuple    go to state 54
    literal  go to state 29


State 44

   23 interval: INTERVALSTART ATOM ATOM INTERVALEND •

    $default  reduce using rule 23 (interval)


State 45

   24 interval: INTERVALSTART ATOM ',' ATOM • INTERVALEND

    INTERVALEND  shift, and go to state 55


State 46

   15 tuples: '&' tuple tuples •

    $default  reduce using rule 15 (tuples)


State 47

   32 constraint: VAR • NOTEQ literal
   33           | VAR • EQ literal
   36           | VAR • ID tuple

    NOTEQ  shift, and go to state 56
    EQ     shift, and go to state 57
    ID     shift, and go to state 58


State 48

   17 tuple: • literal tuple
   18      | • literal
   19 literal: • URI
   20        | • VAR
   21        | • BLANK
   22        | • ATOM
   34 constraint: ID • tuple

    URI    shift, and go to state 23
    BLANK  shift, and go to state 24
    VAR    shift, and go to state 25
    ATOM   shift, and go to state 26

    tuple    go to state 59
    literal  go to state 29


State 49

   35 constraint: '!' • ID tuple
   37           | '!' • VAR ID tuple

    VAR  shift, and go to state 60
    ID   shift, and go to state 61


State 50

   28 filter: FILTER constraints •  [$end, AGGREGATE]
   30 constraints: constraints • '&' constraint

    '&'  shift, and go to state 62

    $default  reduce using rule 28 (filter)


State 51

   31 constraints: constraint •

    $default  reduce using rule 31 (constraints)


State 52

   13 vars: • vars VAR
   14     | ε •
   38 aggregate: AGGREGATE • funcalls
   40 funcalls: • vars '=' ID tuple '&' funcalls
   41         | • vars '=' ID tuple

    $default  reduce using rule 14 (vars)

    vars      go to state 63
    funcalls  go to state 64


State 53

    1 query: select WHERE exttuple tuples filter aggregate •

    $default  reduce using rule 1 (query)


State 54

   10 exttuple: interval tuple ALLENRELATION tuple •

    $default  reduce using rule 10 (exttuple)


State 55

   24 interval: INTERVALSTART ATOM ',' ATOM INTERVALEND •

    $default  reduce using rule 24 (interval)


State 56

   19 literal: • URI
   20        | • VAR
   21        | • BLANK
   22        | • ATOM
   32 constraint: VAR NOTEQ • literal

    URI    shift, and go to state 23
    BLANK  shift, and go to state 24
    VAR    shift, and go to state 25
    ATOM   shift, and go to state 26

    literal  go to state 65


State 57

   19 literal: • URI
   20        | • VAR
   21        | • BLANK
   22        | • ATOM
   33 constraint: VAR EQ • literal

    URI    shift, and go to state 23
    BLANK  shift, and go to state 24
    VAR    shift, and go to state 25
    ATOM   shift, and go to state 26

    literal  go to state 66


State 58

   17 tuple: • literal tuple
   18      | • literal
   19 literal: • URI
   20        | • VAR
   21        | • BLANK
   22        | • ATOM
   36 constraint: VAR ID • tuple

    URI    shift, and go to state 23
    BLANK  shift, and go to state 24
    VAR    shift, and go to state 25
    ATOM   shift, and go to state 26

    tuple    go to state 67
    literal  go to state 29


State 59

   34 constraint: ID tuple •

    $default  reduce using rule 34 (constraint)


State 60

   37 constraint: '!' VAR • ID tuple

    ID  shift, and go to state 68


State 61

   17 tuple: • literal tuple
   18      | • literal
   19 literal: • URI
   20        | • VAR
   21        | • BLANK
   22        | • ATOM
   35 constraint: '!' ID • tuple

    URI    shift, and go to state 23
    BLANK  shift, and go to state 24
    VAR    shift, and go to state 25
    ATOM   shift, and go to state 26

    tuple    go to state 69
    literal  go to state 29


State 62

   30 constraints: constraints '&' • constraint
   32 constraint: • VAR NOTEQ literal
   33           | • VAR EQ literal
   34           | • ID tuple
   35           | • '!' ID tuple
   36           | • VAR ID tuple
   37           | • '!' VAR ID tuple

    VAR  shift, and go to state 47
    ID   shift, and go to state 48
    '!'  shift, and go to state 49

    constraint  go to state 70


State 63

   13 vars: vars • VAR
   40 funcalls: vars • '=' ID tuple '&' funcalls
   41         | vars • '=' ID tuple

    VAR  shift, and go to state 20
    '='  shift, and go to state 71


State 64

   38 aggregate: AGGREGATE funcalls •

    $default  reduce using rule 38 (aggregate)


State 65

   32 constraint: VAR NOTEQ literal •

    $default  reduce using rule 32 (constraint)


State 66

   33 constraint: VAR EQ literal •

    $default  reduce using rule 33 (constraint)


State 67

   36 constraint: VAR ID tuple •

    $default  reduce using rule 36 (constraint)


State 68

   17 tuple: • literal tuple
   18      | • literal
   19 literal: • URI
   20        | • VAR
   21        | • BLANK
   22        | • ATOM
   37 constraint: '!' VAR ID • tuple

    URI    shift, and go to state 23
    BLANK  shift, and go to state 24
    VAR    shift, and go to state 25
    ATOM   shift, and go to state 26

    tuple    go to state 72
    literal  go to state 29


State 69

   35 constraint: '!' ID tuple •

    $default  reduce using rule 35 (constraint)


State 70

   30 constraints: constraints '&' constraint •

    $default  reduce using rule 30 (constraints)


State 71

   40 funcalls: vars '=' • ID tuple '&' funcalls
   41         | vars '=' • ID tuple

    ID  shift, and go to state 73


State 72

   37 constraint: '!' VAR ID tuple •

    $default  reduce using rule 37 (constraint)


State 73

   17 tuple: • literal tuple
   18      | • literal
   19 literal: • URI
   20        | • VAR
   21        | • BLANK
   22        | • ATOM
   40 funcalls: vars '=' ID • tuple '&' funcalls
   41         | vars '=' ID • tuple

    URI    shift, and go to state 23
    BLANK  shift, and go to state 24
    VAR    shift, and go to state 25
    ATOM   shift, and go to state 26

    tuple    go to state 74
    literal  go to state 29


State 74

   40 funcalls: vars '=' ID tuple • '&' funcalls
   41         | vars '=' ID tuple •  [$end]

    '&'  shift, and go to state 75

    $default  reduce using rule 41 (funcalls)


State 75

   13 vars: • vars VAR
   14     | ε •
   40 funcalls: • vars '=' ID tuple '&' funcalls
   40         | vars '=' ID tuple '&' • funcalls
   41         | • vars '=' ID tuple

    $default  reduce using rule 14 (vars)

    vars      go to state 63
    funcalls  go to state 76


State 76

   40 funcalls: vars '=' ID tuple '&' funcalls •

    $default  reduce using rule 40 (funcalls)
